Adding Lenis library for smooth scrolling.

--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@finsweet/ts-utils": "^0.37.3"
+    "@finsweet/ts-utils": "^0.37.3",
+    "@studio-freight/lenis": "^0.2.28",
+    "eslint-plugin-simple-import-sort": "^9.0.0"
   }
 }
