--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@finsweet/ts-utils": "^0.37.3",
     "@studio-freight/lenis": "^0.2.28",
-    "eslint-plugin-simple-import-sort": "^9.0.0"
+    "eslint-plugin-simple-import-sort": "^9.0.0",
+    "gsap": "^3.11.4"
   }
 }
